[gd_scene load_steps=6 format=3 uid="uid://b37a0ifyboyf0"]

[ext_resource type="Script" path="res://scenes/ui/pause_layer.gd" id="1_fchgq"]
[ext_resource type="FontFile" uid="uid://dvgj4did50rd3" path="res://assets/ui/fonts/cruft.ttf" id="2_4pbs7"]
[ext_resource type="Texture2D" uid="uid://ch04hxe7a0jrd" path="res://assets/ui/Pause menu_UI elements-12.png" id="3_n67fd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48dc0"]
texture = ExtResource("3_n67fd")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0
expand_margin_left = 25.0
expand_margin_right = 25.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="Theme" id="Theme_eh74u"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = ExtResource("2_4pbs7")
Label/styles/normal = null
PanelContainer/styles/panel = SubResource("StyleBoxTexture_48dc0")

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fchgq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_eh74u")

[node name="PauseContainer" type="CenterContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/PauseContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PauseContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.35
theme_override_constants/line_spacing = 0
text = "PAUSED"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
action_mode = 0
text = "Continue"

[node name="RestartButton" type="Button" parent="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="SettingsButton" type="Button" parent="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="SettingsContainer" type="CenterContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/SettingsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="MasterVolume" type="VBoxContainer" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="MusicVolume" type="VBoxContainer" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="SFXVolume" type="VBoxContainer" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="BackButton" type="Button" parent="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="QuitConfirmation" type="CenterContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/QuitConfirmation"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/QuitConfirmation/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/QuitConfirmation/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Really quit?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitConfirmButton" type="Button" parent="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Yes"

[node name="QuitRefuseButton" type="Button" parent="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No"

[connection signal="pressed" from="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/SettingsContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/QuitConfirmButton" to="." method="_on_quit_confirm_button_pressed"]
[connection signal="pressed" from="Control/QuitConfirmation/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/QuitRefuseButton" to="." method="_on_quit_refuse_button_pressed"]
